# pazzel

./: .gitignore  AbstractPieceManager.cpp  AbstractPieceManager.h  BasicPieceManager.cpp  BasicPieceManager.h  CMakeLists.txt  CommandLineManager.cpp  CommandLineManager.h  CommandLineParser.cpp  CommandLineParser.h  ParsedPuzzle.cpp  ParsedPuzzle.h  Parser.cpp  Parser.h  PieceManager.cpp  PieceManager.h  PieceManagerFactory.cpp  PieceManagerFactory.h  PuzzleException.cpp  PuzzleException.h  PuzzleParser.cpp  PuzzleParser.h  PuzzlePiece.cpp  PuzzlePiece.h  PuzzlePieceConstrain.h  PuzzleSolver.cpp  PuzzleSolver.h  RotatablePieceManager.cpp  RotatablePieceManager.h  SolverThread.cpp  SolverThread.h  cmd_error_tests.py  error_tests.py  exporter.cpp  exporter.h  main.cpp  makefile  parsedData.cpp  parsedData.h  students.txt  (+2 more)
Tests_ex2/: test1.in  test2.in  test3.in  test4.in  test5.in  test6.in  test7.in
WithRotation/: test10_r.in  test1_r.in  test2_r.in  test3_r.in  test4_r.in  test5_r.in  test6_r.in  test7_r.in  test8_r.in  test9_r.in
WithoutRotation/: test1.in  test10.in  test2.in  test3.in  test4.in  test5.in  test6.in  test7.in  test8.in  test9.in
error_tests/: many_spaces.in  output_missing_piece  output_missing_pieces  output_no_corner  output_not_number_id  output_wrong_ids  output_wrong_ids_format  output_wrong_number_of_element  test_not_number_id  wrong_ids_format.in  wrong_number_of_element.out
rotate_error_tests/: no_possible_shape.in  no_possible_shape.out  not_square_one_piece.in  not_square_one_piece.out  one_raw.in  one_raw.out
